--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "@typescript-eslint/parser": "^8.48.1",
     "babel-jest": "^30.1.2",
     "babel-loader": "^10.0.0",
+    "copy-webpack-plugin": "^13.0.1",
     "eslint": "^9.32.0",
     "eslint-import-resolver-typescript": "^4.4.4",
     "eslint-plugin-import": "^2.32.0",
