--- a/package.json
+++ b/package.json
@@ -86,12 +86,14 @@
     "@babel/runtime": "^7.28.2",
     "@eslint/js": "^9.32.0",
     "@mdx-js/react": "^3.1.0",
-    "@storybook/addon-actions": "7.6.20",
-    "@storybook/addon-docs": "^7.6.20",
-    "@storybook/addon-essentials": "^7.6.20",
-    "@storybook/addon-links": "7.6.20",
-    "@storybook/html": "^7.6.20",
-    "@storybook/html-webpack5": "^7.6.20",
+    "@storybook/addon-actions": "8.6.15",
+    "@storybook/addon-docs": "8.6.15",
+    "@storybook/addon-essentials": "8.6.15",
+    "@storybook/addon-links": "8.6.15",
+    "@storybook/addon-mdx-gfm": "8.6.15",
+    "@storybook/addon-webpack5-compiler-swc": "^1.0.6",
+    "@storybook/html": "8.6.15",
+    "@storybook/html-webpack5": "8.6.15",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^30.0.0",
@@ -119,7 +121,7 @@
     "react-dom": "^17.0.2",
     "react-is": "^17.0.2",
     "solid-logic": "^4.0.1",
-    "storybook": "^7.6.20",
+    "storybook": "8.6.15",
     "terser-webpack-plugin": "^5.3.15",
     "typedoc": "^0.28.9",
     "typescript": "^5.9.2",
