--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,9 +16,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version:
-          - 20.x
-          - 22.x
+        node-version: [20, 22, 24]
     steps:
       - uses: actions/checkout@v6
       - name: Use Node.js ${{ matrix.node-version }}
@@ -30,7 +28,7 @@ jobs:
       - run: npm run build
       - run: npm run doc
       - name: Save build
-        if: matrix.node-version == '20.x'
+        if: matrix.node-version == '20'
         uses: actions/upload-artifact@v6
         with:
           name: build
@@ -73,7 +71,7 @@ jobs:
           name: build
       - uses: actions/setup-node@v6
         with:
-          node-version: 20.x
+          node-version: 20
       - uses: rlespinasse/github-slug-action@v4.x
       - name: Append commit hash to package version
         run: 'sed -i -E "s/(\"version\": *\"[^\"]+)/\1-${GITHUB_SHA_SHORT}/" package.json'
@@ -82,7 +80,6 @@ jobs:
       - uses: JS-DevTools/npm-publish@v4.1.4
         if: github.actor != 'dependabot[bot]' && github.actor != 'dependabot-preview[bot]'
         with:
-          token: ${{ secrets.NPM_TOKEN }}
           tag: ${{ env.GITHUB_REF_SLUG }}
   
   npm-publish-latest:
@@ -95,11 +92,10 @@ jobs:
           name: build
       - uses: actions/setup-node@v6
         with:
-          node-version: 20.x
+          node-version: 20
       - name: Disable pre- and post-publish actions
         run: 'sed -i -E "s/\"((pre|post)publish)/\"ignore:\1/" package.json'
       - uses: JS-DevTools/npm-publish@v4.1.4
         if: github.actor != 'dependabot[bot]' && github.actor != 'dependabot-preview[bot]' 
         with:
-          token: ${{ secrets.NPM_TOKEN }}
           tag: latest
