Added the npm install -g npm@latest step runs before publishing to ensure OIDC support.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -78,11 +78,21 @@ jobs:
         with:
           node-version: 20
           registry-url: 'https://registry.npmjs.org'
+      - name: Update npm to latest (required for OIDC)
+        run: npm install -g npm@latest
       - uses: rlespinasse/github-slug-action@v4.x
       - name: Append commit hash to package version
         run: 'sed -i -E "s/(\"version\": *\"[^\"]+)/\1-${GITHUB_SHA_SHORT}/" package.json'
       - name: Disable pre- and post-publish actions
         run: 'sed -i -E "s/\"((pre|post)publish)/\"ignore:\1/" package.json'
+      - name: Clear npm authentication cache
+        run: |
+          rm -rf ~/.npm/_cacache || true
+          rm -f ~/.npmrc || true
+      - name: Verify npm version
+        run: npm --version
+      - name: Check npm configuration
+        run: npm config list
       - name: Publish to npm
         if: github.actor != 'dependabot[bot]' && github.actor != 'dependabot-preview[bot]'
         run: npm publish --tag ${{ env.GITHUB_REF_SLUG }}
@@ -102,8 +112,18 @@ jobs:
         with:
           node-version: 20
           registry-url: 'https://registry.npmjs.org'
+      - name: Update npm to latest (required for OIDC)
+        run: npm install -g npm@latest
       - name: Disable pre- and post-publish actions
         run: 'sed -i -E "s/\"((pre|post)publish)/\"ignore:\1/" package.json'
+      - name: Clear npm authentication cache
+        run: |
+          rm -rf ~/.npm/_cacache || true
+          rm -f ~/.npmrc || true
+      - name: Verify npm version
+        run: npm --version
+      - name: Check npm configuration
+        run: npm config list
       - name: Publish to npm
         if: github.actor != 'dependabot[bot]' && github.actor != 'dependabot-preview[bot]' 
         run: npm publish --tag latest
