--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   "sideEffects": false,
   "exports": {
     ".": {
+      "types": "./dist/index.d.ts",
       "import": "./dist/solid-ui.esm.js",
-      "require": "./dist/solid-ui.js",
-      "types": "./dist/index.d.ts"
+      "require": "./dist/solid-ui.js"
     }
   },
   "files": [
@@ -71,7 +71,7 @@
     "mime-types": "^3.0.2",
     "pane-registry": "^3.0.0",
     "solid-namespace": "^0.5.4",
-    "uuid": "^11.1.0"
+    "uuid": "^13.0.0"
   },
   "peerDependencies": {
     "rdflib": "^2.3.0",
@@ -97,7 +97,7 @@
     "@testing-library/dom": "^10.4.1",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^30.0.0",
-    "@types/jsdom": "^21.1.7",
+    "@types/jsdom": "^27.0.0",
     "@types/node": "^25.0.3",
     "@typescript-eslint/parser": "^8.48.1",
     "babel-jest": "^30.1.2",
@@ -109,13 +109,13 @@
     "eslint-plugin-n": "^17.21.3",
     "eslint-plugin-promise": "^7.2.1",
     "get-random-values": "^4.0.0",
-    "globals": "^16.3.0",
+    "globals": "^17.1.0",
     "isomorphic-fetch": "^3.0.0",
     "jest": "^30.2.0",
     "jest-environment-jsdom": "^30.0.5",
-    "jsdom": "^26.1.0",
+    "jsdom": "^27.4.0",
     "neostandard": "^0.12.2",
-    "nock": "^13.5.6",
+    "nock": "^15.0.0",
     "rdflib": "^2.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
