--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
   "homepage": "https://github.com/solidos/solid-ui",
   "dependencies": {
     "@noble/curves": "^2.0.1",
-    "acorn": "^8.15.0",
+    "@noble/hashes": "^2.0.1",
     "escape-html": "^1.0.3",
     "mime-types": "^3.0.2",
     "pane-registry": "^3.0.0",
