--- a/package.json
+++ b/package.json
@@ -61,9 +61,9 @@
   ],
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/solidos/solid-ui/issues"
+    "url": "https://github.com/SolidOS/solid-ui/issues"
   },
-  "homepage": "https://github.com/solidos/solid-ui",
+  "homepage": "https://github.com/SolidOS/solid-ui",
   "dependencies": {
     "@noble/curves": "^2.0.1",
     "@noble/hashes": "^2.0.1",
@@ -98,8 +98,8 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^30.0.0",
     "@types/jsdom": "^27.0.0",
-    "@types/node": "^25.0.10",
-    "@typescript-eslint/parser": "^8.53.1",
+    "@types/node": "^25.1.0",
+    "@typescript-eslint/parser": "^8.54.0",
     "babel-jest": "^30.2.0",
     "babel-loader": "^10.0.0",
     "eslint": "^9.39.2",
@@ -109,7 +109,7 @@
     "eslint-plugin-n": "^17.23.2",
     "eslint-plugin-promise": "^7.2.1",
     "get-random-values": "^4.1.1",
-    "globals": "^17.1.0",
+    "globals": "^17.2.0",
     "isomorphic-fetch": "^3.0.0",
     "jest": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0",
